--- a/incubator/core/jsr303/pom.xml
+++ b/incubator/core/jsr303/pom.xml
@@ -63,7 +63,7 @@
 			<version>2.5.1</version>
 			<scope>test</scope>
 			<exclusions>
-            	<!-- transitively provided by isis-jdk-supplemental -->
+            	<!-- transitively provided by causeway-jdk-supplemental -->
             	<exclusion>
             		<groupId>org.ow2.asm</groupId>
             		<artifactId>asm</artifactId>
