--- a/core/runtime/pom.xml
+++ b/core/runtime/pom.xml
@@ -52,7 +52,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>isis-version.properties</include>
+                    <include>causeway-version.properties</include>
                 </includes>
                 <filtering>true</filtering>
             </resource>
