--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -35,7 +35,7 @@
 		Parent pom providing dependency and plugin management for Apache Causeway applications
 		built with Maven. Builds on top of spring-boot-starter-parent.
 	</description>
-	<url>https://isis.apache.org</url>
+	<url>https://causeway.apache.org</url>
 
 	<properties>
 
@@ -144,7 +144,7 @@
 
 	<profiles>
 		<profile>
-			<id>isis-app-starter-datanucleusenhance</id>
+			<id>causeway-app-starter-datanucleusenhance</id>
 			<activation>
 				<file>
 					<exists>${basedir}/logging-dn-enhance.properties</exists>
@@ -216,10 +216,10 @@
 		</profile>
 
 		<profile>
-			<id>isis-app-starter-surefire</id>
+			<id>causeway-app-starter-surefire</id>
 			<activation>
 				<property>
-					<name>!skip.isis-app-starter-surefire</name>
+					<name>!skip.causeway-app-starter-surefire</name>
 				</property>
 			</activation>
 
@@ -341,10 +341,10 @@
 		</profile>
 
 		<profile>
-			<id>isis-app-starter-docker</id>
+			<id>causeway-app-starter-docker</id>
 			<activation>
 				<property>
-					<name>!skip.isis-app-starter-docker</name>
+					<name>!skip.causeway-app-starter-docker</name>
 				</property>
 			</activation>
 			<properties>
@@ -365,10 +365,10 @@
 
 		<!-- running: mvn spring-boot:run -->
 		<profile>
-			<id>isis-app-starter-boot</id>
+			<id>causeway-app-starter-boot</id>
 			<activation>
 				<property>
-					<name>!skip.isis-app-starter-boot</name>
+					<name>!skip.causeway-app-starter-boot</name>
 				</property>
 			</activation>
 			<properties>
@@ -470,7 +470,7 @@
 				<repository>
 					<id>github</id>
 					<name>Github Releases</name>
-					<url>https://maven.pkg.github.com/apache/isis</url>
+					<url>https://maven.pkg.github.com/apache/causeway</url>
 				</repository>
 			</distributionManagement>
 		</profile>
