--- a/viewers/restfulobjects/jaxrs-resteasy-4/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy-4/pom.xml
@@ -87,7 +87,7 @@
 					<groupId>org.jboss.logging</groupId>
 					<artifactId>jboss-logging</artifactId>
 				</exclusion>
-				<!-- transitively provided by isis-jdk-supplemental -->
+				<!-- transitively provided by causeway-jdk-supplemental -->
 				<exclusion>
 					<groupId>org.ow2.asm</groupId>
 					<artifactId>asm</artifactId>
