ISIS-3142: renaming: batch process all .properties files (except antora/*)

--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugPersistence.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugPersistence.properties
@@ -15,6 +15,6 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-logging.level.org.apache.isis.persistence.jdo.datanucleus.persistence.IsisPlatformTransactionManagerForJdo = DEBUG
-logging.level.org.apache.isis.persistence.jdo.datanucleus.persistence.PersistenceSession5 = DEBUG
-logging.level.org.apache.isis.persistence.jdo.datanucleus.persistence.IsisTransactionJdo = DEBUG
+logging.level.org.apache.causeway.persistence.jdo.datanucleus.persistence.CausewayPlatformTransactionManagerForJdo = DEBUG
+logging.level.org.apache.causeway.persistence.jdo.datanucleus.persistence.PersistenceSession5 = DEBUG
+logging.level.org.apache.causeway.persistence.jdo.datanucleus.persistence.CausewayTransactionJdo = DEBUG
