--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugRequestScopedServices.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugRequestScopedServices.properties
@@ -16,7 +16,7 @@
 #  under the License.
 
 # -- framework internal request scoped --
-logging.level.org.apache.isis.viewer.restfulobjects.rendering.service.acceptheader.AcceptHeaderServiceForRest = DEBUG
-logging.level.org.apache.isis.applib.services.iactn.InteractionProvider = DEBUG
-logging.level.org.apache.isis.applib.services.scratchpad.Scratchpad = DEBUG
-logging.level.org.apache.isis.core.runtimeservices.publish.PublisherDispatchServiceDefault = DEBUG
+logging.level.org.apache.causeway.viewer.restfulobjects.rendering.service.acceptheader.AcceptHeaderServiceForRest = DEBUG
+logging.level.org.apache.causeway.applib.services.iactn.InteractionProvider = DEBUG
+logging.level.org.apache.causeway.applib.services.scratchpad.Scratchpad = DEBUG
+logging.level.org.apache.causeway.core.runtimeservices.publish.PublisherDispatchServiceDefault = DEBUG
