--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugVaadin.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugVaadin.properties
@@ -16,4 +16,4 @@
 #  under the License.
 
 logging.level.com.vaadin = DEBUG
-logging.level.org.apache.isis.incubator.viewer.vaadin.ui.auth.VaadinAuthenticationHandler = DEBUG
+logging.level.org.apache.causeway.incubator.viewer.vaadin.ui.auth.VaadinAuthenticationHandler = DEBUG
