--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/IntrospectLazily.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/IntrospectLazily.properties
@@ -15,4 +15,4 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-isis.core.meta-model.introspector.mode=lazy
+causeway.core.meta-model.introspector.mode=lazy
