--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/SilenceProgrammingModel.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/SilenceProgrammingModel.properties
@@ -18,5 +18,5 @@
 #
 #
 
-logging.level.org.apache.isis.core.metamodel.specloader.ProgrammingModelServiceDefault = WARN
-logging.level.org.apache.isis.core.metamodel.specloader.specimpl.FacetedMethodsBuilder = WARN
+logging.level.org.apache.causeway.core.metamodel.specloader.ProgrammingModelServiceDefault = WARN
+logging.level.org.apache.causeway.core.metamodel.specloader.specimpl.FacetedMethodsBuilder = WARN
