--- a/regressiontests/stable-persistence-jpa/src/test/resources/application-config-test.properties
+++ b/regressiontests/stable-persistence-jpa/src/test/resources/application-config-test.properties
@@ -21,4 +21,4 @@
 # renamed to kebab-case, but the old camelCase is also recognised and supported.
 #
 
-isis.core.meta-model.annotation.action.explicit=true
+causeway.core.meta-model.annotation.action.explicit=true
