--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugDiscovery.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugDiscovery.properties
@@ -15,5 +15,5 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-logging.level.org.apache.isis.core.config.beans.IsisBeanTypeRegistry = DEBUG
-logging.level.org.apache.isis.core.config.beans.IsisBeanFactoryPostProcessorForSpring = DEBUG
+logging.level.org.apache.causeway.core.config.beans.CausewayBeanTypeRegistry = DEBUG
+logging.level.org.apache.causeway.core.config.beans.CausewayBeanFactoryPostProcessorForSpring = DEBUG
