--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugProgrammingModel.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/DebugProgrammingModel.properties
@@ -15,5 +15,5 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-logging.level.org.apache.isis.core.metamodel.specloader.ProgrammingModelServiceDefault = DEBUG
-logging.level.org.apache.isis.core.metamodel.specloader.specimpl.FacetedMethodsBuilder = DEBUG
+logging.level.org.apache.causeway.core.metamodel.specloader.ProgrammingModelServiceDefault = DEBUG
+logging.level.org.apache.causeway.core.metamodel.specloader.specimpl.FacetedMethodsBuilder = DEBUG
