--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/NoTranslations.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/NoTranslations.properties
@@ -15,4 +15,4 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-isis.core.runtime-services.translation.po.mode = disabled
+causeway.core.runtime-services.translation.po.mode = disabled
