--- a/core/config/src/main/java/org/apache/causeway/core/config/presets/SilenceMetaModel.properties
+++ b/core/config/src/main/java/org/apache/causeway/core/config/presets/SilenceMetaModel.properties
@@ -15,4 +15,4 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-logging.level.org.apache.isis.core.metamodel.specloader.SpecificationLoaderDefault = WARN
+logging.level.org.apache.causeway.core.metamodel.specloader.SpecificationLoaderDefault = WARN
