--- a/regressiontests/stable-config/src/test/resources/application-config-test.properties
+++ b/regressiontests/stable-config/src/test/resources/application-config-test.properties
@@ -21,5 +21,5 @@
 # renamed to kebab-case, but the old camelCase is also recognised and supported.
 #
 
-isis.core.meta-model.introspector.policy=ANNOTATION_REQUIRED
+causeway.core.meta-model.introspector.policy=ANNOTATION_REQUIRED
 
