--- a/regressiontests/stable-cucumber/src/test/resources/application-config-test.properties
+++ b/regressiontests/stable-cucumber/src/test/resources/application-config-test.properties
@@ -21,5 +21,5 @@
 # renamed to kebab-case, but the old camelCase is also recognised and supported.
 #
 
-isis.core.meta-model.annotation.action.explicit=true
+causeway.core.meta-model.annotation.action.explicit=true
 
