ISIS-3142: renaming: batch process all .yaml/.yml files (except antora/*)

--- a/extensions/core/executionlog/persistence-jpa/src/test/resources/application-test.yml
+++ b/extensions/core/executionlog/persistence-jpa/src/test/resources/application-test.yml
@@ -14,10 +14,10 @@
 #  KIND, either express or implied.  See the License for the
 #  specific language governing permissions and limitations
 #  under the License.
-isis:
+causeway:
   persistence:
     schema:
-      auto-create-schemas: "ISISEXTEXECUTIONLOG"
+      auto-create-schemas: "CAUSEWAYEXTEXECUTIONLOG"
 
   extensions:
     session-log:
