--- a/extensions/core/commandlog/persistence-jdo/src/test/resources/application-test.yml
+++ b/extensions/core/commandlog/persistence-jdo/src/test/resources/application-test.yml
@@ -14,10 +14,10 @@
 #  KIND, either express or implied.  See the License for the
 #  specific language governing permissions and limitations
 #  under the License.
-isis:
+causeway:
   persistence:
     schema:
-      auto-create-schemas: "ISISEXTCOMMANDLOG"
+      auto-create-schemas: "CAUSEWAYEXTCOMMANDLOG"
 
 
 datanucleus:
