--- a/regressiontests/stable-cmdexecauditsess/persistence-jpa/src/test/resources/application-test.yml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jpa/src/test/resources/application-test.yml
@@ -14,15 +14,15 @@
 #  KIND, either express or implied.  See the License for the
 #  specific language governing permissions and limitations
 #  under the License.
-isis:
+causeway:
   persistence:
     schema:
       auto-create-schemas:
-      - "ISISEXTCOMMANDLOG"
-      - "ISISEXTEXECUTIONLOG"
-      - "ISISEXTEXECUTIONOUTBOX"
-      - "ISISEXTAUDITTRAIL"
-      - "ISISEXTSESSIONLOG"
+      - "CAUSEWAYEXTCOMMANDLOG"
+      - "CAUSEWAYEXTEXECUTIONLOG"
+      - "CAUSEWAYEXTEXECUTIONOUTBOX"
+      - "CAUSEWAYEXTAUDITTRAIL"
+      - "CAUSEWAYEXTSESSIONLOG"
 
   extensions:
     session-log:
