ISIS-3260: renames 'Isis' -> 'Causeway' in all .yml files
(cherry picked from commit 553e525fd7318d0041d2eb1950a7c17b9a4dac1b)

--- a/antora/playbooks/site-comguide.yml
+++ b/antora/playbooks/site-comguide.yml
@@ -16,7 +16,7 @@
 #  under the License.
 
 site:
-  title: Apache Isis
+  title: Apache Causeway
   url: https://isis.apache.org/
   start_page: docs:ROOT:about.adoc
 
