--- a/antora/playbooks/site-incubator.yml
+++ b/antora/playbooks/site-incubator.yml
@@ -17,7 +17,7 @@
 
 site:
   title: Apache Causeway
-  url: https://isis.apache.org/
+  url: https://causeway.apache.org/
   start_page: docs:ROOT:about.adoc
 
 content:
@@ -66,8 +66,8 @@ content:
 
 ui:
   bundle:
-#    url: ../isis-antora/build/ui-bundle.zip
-    url: https://github.com/apache/isis-antora/blob/master/build/ui-bundle.zip?raw=true
+#    url: ../causeway-antora/build/ui-bundle.zip
+    url: https://github.com/apache/causeway-antora/blob/master/build/ui-bundle.zip?raw=true
     snapshot: true
   supplemental_files: antora/supplemental-ui
 
