--- a/antora/playbooks/site-comguide.yml
+++ b/antora/playbooks/site-comguide.yml
@@ -80,8 +80,8 @@ asciidoc:
     kroki-default-options: interactive # only available for SVG
     kroki-fetch-diagram: true
     kroki-server-url: https://kroki.io # (default)
-    page-isisprev: "2.0.0-M7"
-    page-isisrel: "2.0.0-M8"
+    page-causewayprev: "2.0.0-M7"
+    page-causewayrel: "2.0.0-M8"
 
 output:
   dir: antora/target/site
