--- a/antora/playbooks/site-incubator.yml
+++ b/antora/playbooks/site-incubator.yml
@@ -87,8 +87,8 @@ asciidoc:
     kroki-default-options: interactive # only available for SVG
     kroki-fetch-diagram: true
     kroki-server-url: https://kroki.io # (default)
-    page-causewayprev: "2.0.0-M7"
-    page-causewayrel: "2.0.0-M8"
+    page-causewayprev: "2.0.0-M9"
+    page-causewayrel: "2.0.0-RC1"
 
 output:
   dir: antora/target/site
