--- a/.github/workflows/ci-build-site-no-push.yml
+++ b/.github/workflows/ci-build-site-no-push.yml
@@ -67,7 +67,7 @@ jobs:
       working-directory: ${{ env.PROJECT_ROOT_PATH }}
       # we install the 'node' modules into the project root under 'node_modules',
       # because we have no privileges to install them globally with -g option
-      run: npm i @antora/cli@3.0.1 @antora/site-generator-default@3.0.1  @asciidoctor/core@2.2.6 asciidoctor-kroki
+      run: npm i @antora/cli@^3.1.1 @antora/site-generator-default@^3.1.1  asciidoctor-kroki
 
     - name: Print Antora Version
       shell: bash
