ISIS-3267 : adds BackgroundService
also changes design of CommandLogEntry, persist parentInteractionId rather than parent reference, and reinstate executeIn enum attribute

--- a/extensions/core/commandlog/applib/pom.xml
+++ b/extensions/core/commandlog/applib/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>causeway-core-runtimeservices</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
 
         <!-- TESTING -->
 
