--- a/tooling/cli/adoc/modules/tooling-cli/examples/causeway-tooling.yml
+++ b/tooling/cli/adoc/modules/tooling-cli/examples/causeway-tooling.yml
@@ -23,56 +23,63 @@ commands:
     description: "These tables summarize all Maven artifacts available with _Apache Causeway_."
 
     sections:
-      App: org.apache.causeway.app.*
-      Mavendeps: org.apache.causeway.mavendeps.*
-      Testing: org.apache.causeway.testing.*
-      Examples: org.apache.causeway.examples.*
+      "Starter App": org.apache.causeway.app.*
 
-      Root: org.apache.causeway
-      Commons: org.apache.causeway.commons.*
+      "Root": org.apache.causeway
+      "Commons": org.apache.causeway.commons.*
 
-      Core: org.apache.causeway.core.*
+      "Core": org.apache.causeway.core.*
+      "Applib": org.apache.causeway.core:causeway-applib.*
+      "Schema": org.apache.causeway.core:causeway-schema.*
 
-      Persistence: org.apache.causeway.persistence
-      JDO: "org.apache.causeway.persistence:causeway-persistence-jdo.*"
-      JPA: "org.apache.causeway.persistence:causeway-persistence-jpa.*"
+      "Testing": org.apache.causeway.testing.*
+      "Mavendeps": org.apache.causeway.mavendeps.*
 
-      Security: org.apache.causeway.security
-      Bypass: "org.apache.causeway.security:causeway-security-bypass.*"
-      Keycloak: "org.apache.causeway.security:causeway-security-keycloak.*"
-      Shiro: "org.apache.causeway.security:causeway-security-shiro.*"
-      Spring: "org.apache.causeway.security:causeway-security-spring.*"
+      "Persistence": org.apache.causeway.persistence
+      "JPA": "org.apache.causeway.persistence:causeway-persistence-jpa.*"
+      "JDO": "org.apache.causeway.persistence:causeway-persistence-jdo.*"
 
-      Viewer: org.apache.causeway.viewer
+      "Security": org.apache.causeway.security
+      "Bypass": "org.apache.causeway.security:causeway-security-bypass.*"
+      "Spring": "org.apache.causeway.security:causeway-security-spring.*"
+      "Keycloak": "org.apache.causeway.security:causeway-security-keycloak.*"
+      "Shiro": "org.apache.causeway.security:causeway-security-shiro.*"
+
+      "Viewer": org.apache.causeway.viewer
       "Common": "org.apache.causeway.viewer:causeway-viewer-common.*"
       "Restful Objects": "org.apache.causeway.viewer:causeway-viewer-restfulobjects.*"
-      Wicket: "org.apache.causeway.viewer:causeway-viewer-wicket.*"
+      "Wicket": "org.apache.causeway.viewer:causeway-viewer-wicket.*"
 
-      Valuetypes: org.apache.causeway.valuetypes.*
+      "Valuetypes": org.apache.causeway.valuetypes.*
       "Asciidoc": "org.apache.causeway.valuetypes:causeway-valuetypes-asciidoc.*"
       "Markdown": "org.apache.causeway.valuetypes:causeway-valuetypes-markdown.*"
-      "SSE": "org.apache.causeway.valuetypes:causeway-valuetypes-sse.*"
+      "Vega": "org.apache.causeway.valuetypes:causeway-valuetypes-vega.*"
 
-      Extensions: org.apache.causeway.extensions
-      "Applib: Excel": "org.apache.causeway.extensions:causeway-extensions-excel.*"
+      "Extensions": org.apache.causeway.extensions
+      "Library: Excel": "org.apache.causeway.extensions:causeway-extensions-excel.*"
       "Core: Command Log": "org.apache.causeway.extensions:causeway-extensions-commandlog.*"
-      "Core: Command Replay": "org.apache.causeway.extensions:causeway-extensions-commandreplay.*"
-      #"Core: Flyway": "org.apache.causeway.extensions:causeway-extensions-flyway.*"
-      "Core: Quartz": "org.apache.causeway.extensions:causeway-extensions-quartz.*"
-      #"Security: Audit Trail": "org.apache.causeway.security:causeway-extensions-audittrail.*"
-      "Security: Secman": "org.apache.causeway.security:causeway-extensions-secman.*"
-      #"Security: Session Log": "org.apache.causeway.security:causeway-extensions-sessionlog.*"
-      "Security: Shiro LDAP Realm": "org.apache.causeway.security:causeway-extensions-shiro-realm-ldap.*"
-      "RO Viewer: CORS": "org.apache.causeway.security:causeway-extensions-cors.*"
-      "Wicket Viewer: Excel Download": "org.apache.causeway.security:causeway-extensions-exceldownload.*"
-      "Wicket Viewer: Full Calendar": "org.apache.causeway.security:causeway-extensions-fullcalendar.*"
-      #"Wicket Viewer: Gmap3": "org.apache.causeway.security:causeway-extensions-gmap3.*"
-      "Wicket Viewer: Pdf.js": "org.apache.causeway.security:causeway-extensions-fullcalendar.*"
+      "Core: Execution Log": "org.apache.causeway.extensions:causeway-extensions-executionlog.*"
+      "Core: Execution Outbox": "org.apache.causeway.extensions:causeway-extensions-executionoutbox.*"
+      "Core: Execution Republisher": "org.apache.causeway.extensions:causeway-extensions-executionrepublisher.*"
+      #"Core: Command Replay": "org.apache.causeway.extensions:causeway-extensions-commandreplay.*"
+      "Core: Flyway": "org.apache.causeway.extensions:causeway-extensions-flyway.*"
+      "Security: Audit Trail": "org.apache.causeway.extensions:causeway-extensions-audittrail.*"
+      "Security: Secman": "org.apache.causeway.extensions:causeway-extensions-secman.*"
+      "Security: Session Log": "org.apache.causeway.extensions:causeway-extensions-sessionlog.*"
+      "Security: Shiro LDAP Realm": "org.apache.causeway.extensions:causeway-extensions-shiro-realm-ldap.*"
+      "Security: Spring OAuth2": "org.apache.causeway.extensions:causeway-extensions-spring-security-oauth2.*"
+      "RO Viewer: CORS": "org.apache.causeway.extensions:causeway-extensions-cors.*"
+      "Wicket Viewer: Excel Download": "org.apache.causeway.extensions:causeway-extensions-exceldownload.*"
+      "Wicket Viewer: Full Calendar": "org.apache.causeway.extensions:causeway-extensions-fullcalendar.*"
+      #"Wicket Viewer: Gmap3": "org.apache.causeway.extensions:causeway-extensions-gmap3.*"
+      "Wicket Viewer: Pdf.js": "org.apache.causeway.extensions:causeway-extensions-fullcalendar.*"
+      "Wicket Viewer: SSE": "org.apache.causeway.extensions:causeway-extensions-sse.*"
 
+      "Examples": org.apache.causeway.examples.*
       "Tooling": org.apache.causeway.tooling.*
       "Regression Tests": org.apache.causeway.regressiontests.*
 
-      Incubator: org.apache.causeway.incubator
+      "Incubator": org.apache.causeway.incubator
       "Kroviz Client": "org.apache.causeway.incubator.clients:causeway-client-kroviz.*"
       "GraphQL Viewer": "org.apache.causeway.incubator.viewer:causeway-viewer-graphql.*"
       "Vaadin Viewer": "org.apache.causeway.incubator.viewer:causeway-viewer-vaadin.*"
