--- a/incubator/extensions/core/commandreplay/secondary/pom.xml
+++ b/incubator/extensions/core/commandreplay/secondary/pom.xml
@@ -86,6 +86,10 @@
 			<artifactId>jersey-spring5</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
 
 	</dependencies>
 </project>
