--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
 				<module>incubator/viewers/javafx</module>
 				<module>incubator/viewers/vaadin</module>
 				<module>valuetypes/asciidoc/ui/vaadin</module>
+				<module>incubator/extensions/core/commandreplay</module>
 
 				<module>regressiontests</module>
 				<module>tooling</module>
