--- a/regressiontests/stable/src/main/resources/application.yml
+++ b/regressiontests/stable/src/main/resources/application.yml
@@ -50,18 +50,17 @@ causeway:
         validate-incrementally: false
 
   viewer:
-    wicket:
+    common:
       application:
         name: Smoke Tests
         css: css/application.css
         js: scripts/application.js
         about: Smoke Tests
-
         credit:
         - url:  http://causeway.apache.org
           image: images/apache-causeway/logo-48x48.png
           name: Apache Causeway
-
+    wicket:
       themes:
         initial: Flatly
         showChooser: true
