ISIS-3071: exclude new workaround script from yuicompressor (does not seem to know what to do with it)

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -341,6 +341,7 @@
 						<excludes>
 							<!-- -->
 							<exclude>**/jquery.causeway.wicket.viewer.js</exclude>
+							<exclude>**/file-upload-nesting-fix.js</exclude>
 							<!-- select 2 -->
 							<exclude>**/i18n/*.js</exclude>
 							<exclude>**/select2*.js</exclude>
