ISIS-3071: don't compress js when filename matches *.nocompress.js
- also adds OnDomReadyHeaderContributor as reusable utility for DOM
ready java scripts

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -340,8 +340,7 @@
 						<suffix>.min</suffix>
 						<excludes>
 							<!-- -->
-							<exclude>**/jquery.causeway.wicket.viewer.js</exclude>
-							<exclude>**/file-upload-nesting-fix.js</exclude>
+							<exclude>**/*.nocompress.js</exclude>
 							<!-- select 2 -->
 							<exclude>**/i18n/*.js</exclude>
 							<exclude>**/select2*.js</exclude>
