ISIS-2445: add dependabot config for spring6 branch

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,5 +21,14 @@ updates:
       interval: "daily"
     # Allow up to 10 open pull requests for maven dependencies
     open-pull-requests-limit: 20
+    
+  # Maintain dependencies for Maven (3.0.0 milestones)
+  - package-ecosystem: "maven"
+    target-branch: "spring6"
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "daily"
+    # Allow up to 10 open pull requests for maven dependencies
+    open-pull-requests-limit: 20
 
 
